Fix: `ColoniesListItem` text <> avatar alignment

--- a/src/modules/dashboard/components/Dashboard/ColoniesListItem.css
+++ b/src/modules/dashboard/components/Dashboard/ColoniesListItem.css
@@ -10,7 +10,7 @@
 .displayName {
   composes: inlineEllipsis from '~styles/text.css';
   display: inline-block;
-  margin-left: 14px;
+  margin: -2px 0 0 14px;
   max-width: 172px;
   font-size: var(--size-normal);
   font-weight: var(--weight-medium);
